--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-22  Michael Meeks  <michael@ximian.com>
+
+	* Makefile.am (EXTRA_DIST): add libart.def.
+
 2004-03-04  Glynn Foster  <glynn.foster@sun.com>
 
 	* Makefile.am, configure.in, libart-2.0-uninstalled.pc.in:
