--- a/README
+++ b/README
@@ -13,3 +13,7 @@ licensing flexibility.
 For more information about libart, see the web page:
 
    http://www.levien.com/libart/
+
+There's also a libart tutorial available at
+http://www.gnome.org/~mathieu/libart/libart.html
+
