--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-21  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Release 2.3.17
+
 2004-03-22  Michael Meeks  <michael@ximian.com>
 
 	* Makefile.am (EXTRA_DIST): add libart.def.
