--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-26  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in: 2.3.18.
+
 2006-12-06  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* .cvsignore:
