--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-28  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in: Fix a typo introduced with the bug fix
+	for bug #131478. Noticed by Yanko Kaneti.
+
 2007-02-26  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: 2.3.18.
