--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 ==============
+Version 2.3.19
+==============
+
+- Fix typo that broke versioning. (Yanko Kaneti)
+
+==============
 Version 2.3.18
 ==============
 
