--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 ==============
+Version 2.3.20
+==============
+
+- Fix including art_misc.h from C++
+
+==============
 Version 2.3.19
 ==============
 
