--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-30  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	* NEWS: 
+	Release 2.3.20
+
 2007-03-01  Frederic Crozat  <fcrozat@mandriva.com>
 
 	reviewed by: Dom Lachowicz <cinamod@hotmail.com>
